--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "next": "14.2.3",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
+    "react-router-dom": "^6.23.0",
+    "router": "^1.3.8",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
