--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.3",
+    "@heroicons/react": "^2.1.3",
+    "lodash": "^4.17.21",
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18",
