--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@storybook/addon-interactions": "^8.1.5",
     "@storybook/addon-links": "^8.1.5",
     "@storybook/addon-onboarding": "^8.1.5",
+    "@storybook/addon-storysource": "^8.1.5",
     "@storybook/blocks": "^8.1.5",
     "@storybook/nextjs": "^8.1.5",
     "@storybook/react": "^8.1.5",
