--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "swiper": "^11.1.1"
   },
   "devDependencies": {
+    "@storybook/addon-contexts": "^5.3.21",
     "@storybook/addon-essentials": "^8.1.5",
     "@storybook/addon-interactions": "^8.1.5",
     "@storybook/addon-links": "^8.1.5",
