--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "swiper": "^11.1.1"
   },
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@storybook/addon-essentials": "^8.1.5",
     "@storybook/addon-interactions": "^8.1.5",
     "@storybook/addon-links": "^8.1.5",
@@ -40,6 +41,7 @@
     "eslint-config-next": "14.2.3",
     "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8.4.38",
+    "react-refresh": "^0.14.2",
     "storybook": "^8.1.5",
     "storybook-design-token": "^3.1.0",
     "tailwindcss": "^3.4.3",
