--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "@storybook/addon-onboarding": "^8.1.5",
     "@storybook/addon-storysource": "^8.1.5",
     "@storybook/blocks": "^8.1.5",
+    "@storybook/client-api": "^7.6.17",
     "@storybook/nextjs": "^8.1.5",
-    "@storybook/react": "^8.1.5",
+    "@storybook/react": "^8.1.10",
     "@storybook/test": "^8.1.5",
     "@types/node": "^20",
     "@types/react": "^18",
